--- a/src/components/Modal/modal.less
+++ b/src/components/Modal/modal.less
@@ -13,7 +13,7 @@
     background-color: @modalBackgroundColor;
     border-radius: 3px;
     overflow: hidden;
-    color: @textColorTitle;
+    color: @colorDefault;
 
     &_hd {
       position: relative;
