--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -8,6 +8,7 @@ html {
 body {
   line-height: 1.6;
   font-family: @fontDefault;
+  -webkit-overflow-scrolling: touch;
 }
 
 html, body, div, dl, dt, dd,
