--- a/src/style/variable/color.less
+++ b/src/style/variable/color.less
@@ -1,8 +1,17 @@
 // color
+@colorWhite: #FFFFFF;
+@colorDefault: #353535;
+@colorMuted: #D2D2D2;
+@colorGray: #999999;
+@colorTips: #BCB9B9;
+
 @colorPrimary: #3cb8b8;
 @colorPrimaryActive: #139191;
 @colorPrimaryDisabled: #6EDBDB;
-@colorWarn: #E64340;
+
+@colorWarning: #E64340;
+@colorWarningActive: #E52420;
+@colorWarningDisabled: #F2605D;
 
 // link
 @linkColorDefault: @colorPrimary;
@@ -14,9 +23,3 @@
 // line
 @lineColorLight: #E5E5E5;
 @lineColorDark: #BCBAB6;
-
-// text
-@textColorTitle: #353535;
-@textColorTips: #B2B2B2;
-@textColorWarn: @colorWarn;
-@textColorGray: #999999;
